2002-03-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/gnus-msg.el (gnus-summary-resend-message-edit): Use
	`mime-edit-again' instead of `mime-to-mml' to recompose a message.

2002-03-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/message.el (mm-make-temp-file): Copied from mm-util.el.

2002-03-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/message.el (message-fix-before-sending): Bind
	`mm-7bit-chars' to the value that concat the original value and
	escape.

	* lisp/nnheader.el (mm-7bit-chars): Remove.

2002-03-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/gnus-art.el (gnus-article-edit-mode): Don't call `mml-mode'.

	* lisp/nnheader.el (mm-7bit-chars): Copied from mm-bodies.el.
	(mm-multibyte-p): New alias.
	(mm-char-int): Alias to `char-int'.

2002-02-26  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* lisp/gnus-art.el (gnus-request-article-this-buffer): Sync up
	with Oort-gnus.

	* lisp/nntp.el (nntp-open-via-rlogin-and-telnet): Wrap
	`call-process' with `as-binary-process'.

2002-02-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/smiley.el (smiley-regexp-alist): Fix the order of faces.

2002-02-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/smiley.el (smiley-regexp-alist): Use faces which originate
	in etc-0.27.tar.gz if exist.
	(gnus-smiley-file-types): Add xbm if available.
	(smiley-region): Don't put two or more faces in one place.

2002-02-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/gnus-art.el (gnus-request-article-this-buffer): Temporally
	fix: erase the buffer before inserting (and saving) an article.

2002-02-22  Steve Youngs  <youngs@xemacs.org>

	* aclocal.m4 (AC_PATH_LISPDIR): Default to
	.../site-packages/lisp/gnus for XEmacs.
	(AC_PATH_ETCDIR): Default to .../site-packages/etc/gnus for
	XEmacs.

2002-02-21   Daiki Ueno  <ueno@unixuser.org>

	* lisp/gnus-group.el (gnus-group-name-encode): New function.
	(gnus-group-encoded-name): New function.
	(gnus-group-completing-read-group-name): New function.
	(gnus-fetch-group): Use it.